[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfgate-sdk-python"
dynamic = ["version"]
description = "PDFGate's official Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Fernando Gasperi", email = "fgasperijabalera@gmail.com" },
  { name = "Demetra Theodorou", email = "demtra@pdfgate.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx"
]

[project.urls]
Documentation = "https://github.com/pdfgate/pdfgate-sdk-python#readme"
Issues = "https://github.com/pdfgate/pdfgate-sdk-python/issues"
Source = "https://github.com/pdfgate/pdfgate-sdk-python"

[tool.hatch.version]
path = "src/pdfgate_sdk_python/__about__.py"

[tool.hatch.envs.default]
python = "3.9"

[tool.hatch.envs.dev]
dependencies = [
  "pytest",
  "respx",
  "mypy>=1.0.0",
  "ruff",
  "pypdf",
  "pre-commit"
]

[tool.hatch.envs.dev.scripts]
check = "mypy --install-types --non-interactive {args:src/pdfgate_sdk_python tests}"
lint = "ruff check ."

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "respx",
  "cryptography>=3.1",
  "pypdf"
]

[tool.hatch.envs.test.scripts]
test = "pytest --ignore=tests/test_pdfgate_acceptance.py"
test_acceptance = "pytest tests/test_pdfgate_acceptance.py {args}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
